# ureact

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Introduction.md  LICENSE.MIT  Makefile  README.md  main3.cpp  main4.cpp  main5.cpp  main6.cpp
.github/: issue_template.md  pull_request_template.md
.github/workflows/: cmake_test.yml  codacy-analysis.yml  codeql-analysis.yml  integration_test.yml  linux.yml  macos.yml  support.yml  ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt
benchmark/src/: filter.cpp  hold.cpp  pulse.cpp  signal_composing.cpp  snapshot.cpp
doc/: dataflow_model.adoc  dataflow_model.md  docinfo.html  feature_default_context.adoc  feature_member_reactives.adoc  features.md  integration.md  introduction.adoc  introduction.md  overview.adoc  readme.adoc  readme.md  readme.xml  reference.adoc  reference.md  roadmap.md  signals_vs_callbacks.adoc  signals_vs_callbacks.md  tutorial.adoc  tutorial.md
doc/html/: index.html
doc/original_docs/: Introduction.md
example/: CMakeLists.txt
example/xxx_glitch/: CMakeLists.txt  glitch_example_boost.cpp  glitch_free_example_ureact.cpp
examples/: CMakeLists.txt
examples/src/: changing_multiple_inputs.cpp  complex_signals_v1.cpp  complex_signals_v2.cpp  complex_signals_v3.cpp  composition.cpp  creating_subject_bound_observers_v1.cpp  creating_subject_bound_observers_v2.cpp  detaching_observers_by_themselves.cpp  detaching_observers_manually.cpp  dynamic_signal_references.cpp  hello_world_make_signal.cpp  hello_world_operators.cpp  modifying_signal_values_in_place.cpp  observers.cpp  reacting_to_value_changes.cpp  reactive_class_members.cpp  signals.cpp  signals_of_references.cpp  using_scoped_observers.cpp
include/ureact/: all_headers.hpp  binary_operators.hpp  cast.hpp  changed.hpp  closure.hpp  collect.hpp  context.hpp  count.hpp  current_headers.hpp  default_context.hpp  defines.hpp  equal_to.hpp  event_emitter.hpp  event_range.hpp  events.hpp  filter.hpp  flatten.hpp  fold.hpp  fork.hpp  has_changed.hpp  hold.hpp  lift.hpp  merge.hpp  monitor.hpp  observe.hpp  observe_policy.hpp  observer.hpp  observer_action.hpp  only_checp_headers.hpp  process.hpp  pulse.hpp  react.hpp  reactive_ref.hpp  scoped_observer.hpp  signal.hpp  signal_.hpp  signal_pack.hpp  sink.hpp  snapshot.hpp  take_drop.hpp  (+15 more)
include/ureact/adaptor/: adjacent.hpp  adjacent_filter.hpp  adjacent_transform.hpp  cast.hpp  changed.hpp  changed_to.hpp  collect.hpp  count.hpp  drop.hpp  drop_while.hpp  elements.hpp  enumerate.hpp  filter.hpp  flatten.hpp  fold.hpp  happened.hpp  hold.hpp  join.hpp  join_with.hpp  keys.hpp  lift.hpp  merge.hpp  monitor.hpp  monitor_change.hpp  observe.hpp  once.hpp  pairwise.hpp  pairwise_filter.hpp  pairwise_transform.hpp  process.hpp  (+20 more)
single_include/ureact/: ureact_amalgamated.hpp
src/: ureact.cpp
support/: .gitignore  Doxyfile  generate_amalgamated_file.py  pretty.sh  requirements.txt  venv.sh
support/cmake/: Config.cmake.in  set_warning_flags.cmake
support/integration_generation/: cmake_copied_header.cmake  cmake_external_project.cmake  cmake_fetch_content.cmake  cmake_find_package.cmake  cmake_subdirectory.cmake  generate.cmake  integration_main.cmake  test.cpp
tests/: CMakeLists.txt
tests/compilation_time/: CMakeLists.txt  compiler_args.cpp  compiler_args.hpp  context.cpp  events.cpp  signal.cpp  std_headers_include_time.cpp  transform_compilation.cpp  transform_result.txt  ureact_headers_include_time.cpp
tests/compilation_time/test_samples/: context.cpp  events.cpp  include_std.cpp  include_ureact.cpp  minimal.cpp  signal.cpp  transform.cpp
tests/details/: dynamic_signals_test.cpp  move_test.cpp  operators_test.cpp  signal_test.cpp
tests/examples/: signal_examples.cpp
tests/integration/: readme.md  test_integration.cmake
tests/integration/cmake_copied_header/: CMakeLists.txt  readme.md
tests/integration/cmake_copied_header/ureact/: ureact.hpp
tests/integration/cmake_external_project/: CMakeLists.txt  readme.md
tests/integration/cmake_fetch_content/: CMakeLists.txt  readme.md
tests/integration/cmake_find_package/: CMakeLists.txt  readme.md  test.cpp
tests/integration/cmake_subdirectory/: CMakeLists.txt  readme.md
tests/self_contained/: CMakeLists.txt
tests/src/: CMakeLists.txt  adaptor.cpp  benchmak_signal_composing.cpp  benchmark_signal_composing.cpp  benchmark_transform.cpp  cast.cpp  catch2_extra.hpp  changed.cpp  closure.cpp  collect.cpp  context.cpp  copy_stats.hpp  count.cpp  default_context.cpp  detail.cpp  dynamic_signals_test.cpp  elements.cpp  event_emitter.cpp  event_range.cpp  events.cpp  filter.cpp  flatten.cpp  fold.cpp  fork.cpp  happened.cpp  has_changed.cpp  hold.cpp  identity.hpp  join.cpp  legacy.cpp  lift.cpp  lift_operators.cpp  main.cpp  merge.cpp  monitor.cpp  monitor_change.cpp  move_test.cpp  observer.cpp  observer_test.cpp  operators_test.cpp  (+21 more)
tests/src/adaptor/: adjacent.cpp  adjacent_filter.cpp  adjacent_transform.cpp  cast.cpp  changed.cpp  changed_to.cpp  collect.cpp  count.cpp  drop.cpp  drop_while.cpp  elements.cpp  enumerate.cpp  filter.cpp  flatten.cpp  fold.cpp  happened.cpp  hold.cpp  join.cpp  join_with.cpp  keys.cpp  lift.cpp  merge.cpp  monitor.cpp  monitor_change.cpp  observe.cpp  once.cpp  pairwise.cpp  pairwise_filter.cpp  pairwise_transform.cpp  process.cpp  pulse.cpp  reactive_ref.cpp  slice.cpp  snapshot.cpp  stride.cpp  take.cpp  take_drop_while.cpp  take_while.cpp  tap.cpp  transform.cpp  (+5 more)
tests/src/details/: EventStreamTest.cpp  ObserverTest.cpp  OperationsTest.cpp  SignalTest.cpp  dynamic_signals_test.cpp  filter_test.cpp  fold_test.cpp  monitor_test.cpp  move_test.cpp  observer_test.cpp  operators_test.cpp  process_test.cpp  signal_test.cpp
tests/src/examples/: complex_signal_examples.cpp  composition_examples.cpp  observer_examples.cpp  readme.md  signal_examples.cpp
tests/src/feature/: adaptor.cpp  default_context.cpp  has_changed.cpp  propagation.cpp  reactive_members.cpp  shared_ptr_semantics.cpp
tests/src/include/: tests_stdafx.hpp
tests/src/playground/: CMakeLists.txt  main.cpp
(+92 files in other folders)
